# harrington-automation-station

./: .gitignore  CURRENT_STATUS.md  Home.py  README.md  knife_edge_zscan.py  pyproject.toml
.streamlit/: config.toml
app/: streamlit_app.py
app/pages/: 1_Full_Auto.py  2_Semi_Auto.py  3_Minimal.py  4_Results.py  5_Settings.py  6_Gnuplot.py  7_Digital_Twin_Compare.py  9_Admin.py
data/manual/: secrets.json
pages/: 1_Full_Auto.py  2_Semi_Auto.py  4_Results.py
src/automation_station/: __init__.py  cli.py
src/automation_station/analysis/: beam_profile.py
src/automation_station/hardware/: __init__.py  base.py  drivers.py  registry.py
src/automation_station/hardware/andor/: __init__.py  instruments.py
src/automation_station/hardware/beam_diagnostics/: __init__.py
src/automation_station/hardware/coherent/: __init__.py  lasers.py
src/automation_station/hardware/galil/: __init__.py
src/automation_station/hardware/lantronix/: __init__.py
src/automation_station/hardware/light_conversion/: __init__.py  lasers.py
src/automation_station/hardware/newport/: __init__.py  conex.py  esp301.py
src/automation_station/hardware/ni/: __init__.py  daq.py
src/automation_station/hardware/nsc100/: __init__.py  mock.py  scan.py
src/automation_station/hardware/ophir/: __init__.py
src/automation_station/hardware/thorlabs/: __init__.py  accessories.py  pm100.py
src/automation_station/io/: config.py
src/automation_station/reporting/: __init__.py
src/automation_station/ui/: access.py  branding.py  layout.py
