[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automation-station"
version = "1.0.0"
description = "Lab automation platform: beam profiling, hardware control, and data analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Joey Harrington" },
]
dependencies = [
    "streamlit>=1.30.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "harrington-common",
    "numba>=0.64.0",
    "cupy-cuda12x>=14.0.1",
    "joblib>=1.5.3",
]

[project.optional-dependencies]
hardware = [
    "pythonnet>=3.0.0",
    "pywin32>=306",
    "pyserial>=3.5",
    "newport-nsc100",
]
ai = [
    "anthropic>=0.40.0",
    "openai>=1.60.0",
]
dev = ["pytest", "ruff"]

[project.scripts]
profiler-cli = "automation_station.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
harrington-common = { workspace = true }
newport-nsc100 = { workspace = true }

[dependency-groups]
dev = ["pytest", "ruff"]
